# ftrack-perforce-location

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  installing.rst  known_issues.rst  setup.rst
doc/source/release/: index.rst  release_notes.rst
hook/: configure_user_settings_widget.py
resource/application_hook/: perforce_structure_hook.py
resource/event/: register_typemap_hook.py
resource/hook/: activate_scenario_hook.py  configure_scenario_hook.py  configure_user_settings_hook.py  configure_user_settings_widget.py  connect_plugin_hook.py  perforce_attribute_action_hook.py  perforce_post_publish_hook.py  post_publish_hook.py  register_typemap_hook.py  scenario_hook.py
resource/location/: activate_scenario_hook.py  configure_scenario_hook.py  perforce_attribute_action_hook.py  post_publish_hook.py  register_typemap_hook.py
resource/modules/linux/p4py/: P4.py
resource/modules/osx/p4py/: license.txt
resource/modules/p4py_vc14/: P4API.pyd
resource/modules/windows/: README.txt
resource/modules/windows/p4py_vc11/: P4API.pyd
source/ftrack_perforce_location/: __init__.py  _version.py  accessor.py  configure_logging.py  constants.py  depot_attribute_action.py  import_p4api.py  location_plugin.py  perforce_accessor.py  perforce_location_plugin.py  perforce_resource_transformer.py  perforce_scenario.py  perforce_structure.py  post_publish.py  resource_transformer.py  scenario.py  structure.py  user_settings.py  validate_workspace.py
source/ftrack_perforce_location/perforce_handlers/: __init__.py  change.py  connection.py  errors.py  file.py  settings.py
