[tool.poetry]
name = 'ftrack-perforce-location'
version = "2.0.0"
description = "ftrack location integration with perforce."
license = "Apache-2.0"
authors = [ "ftrack <support@ftrack.com>"]
readme = "README.md"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/ftrack-perforce-location"
documentation = "https://developer.ftrack.com/"
keywords = ["ftrack", "integration", "connect", "location", "structure", "storage", "scenario", "accessor", "perforce", "source control"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
]
packages = [{include = "hook"},{include = "location"}]
exclude =["./pyproject.toml", "./README.md"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^1.2.2"
sphinx_rtd_theme = ">= 0.1.6, < 1"
lowdown = ">= 0.1.0, < 2"
platformdirs = "^4.1.0"
ftrack-action-handler = "^0.3.0"
"Qt.py" = ">=1.0.0, < 2"
p4python = "2023.2.2581979"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"